--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       *{
         margin: 0;
         font-family: 'Urbanist',sans-serif;
+        font-weight: 600;
       }
     </style>
     <!--
